Bug 1151225 - Wrap the first line of commit messages (After first review)

--- a/webapp/app/css/treeherder.css
+++ b/webapp/app/css/treeherder.css
@@ -381,14 +381,13 @@ th-watched-repo {
 }
 
 .commit-msg-wrap {
-  
+    color: #777;
     display: inline-block;
     max-width: 80%;
     overflow: visible;
     padding-left: 5px;
     vertical-align: text-top;
     white-space: normal;
-  
  }
 
 .platform {
